# cmocha

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  example.c  mocha.c  mocha.h
example/: CMakeLists.txt  example.c
